--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,10 +1,42 @@
 .login{
     background-color: #FFE7F3;
     text-align: center;
-    font-family: sans-serif;
+    font-family: monospace;         
 }
 
 
-.input{
+#input{
     width: 300px;
+}
+
+.li {
+    list-style: none; 
+    margin-right: 10px;
+    display: inline;
+}
+
+.ul {
+    display: flex;
+    justify-content: center;
+    background-color: #FF63B1;
+    height: 50px;
+    margin: 0;
+    padding-top: 30px;
+    font-size: 16px;
+
+}
+ 
+.li a {
+    padding: 10px 20px; 
+    margin:0;
+    border: 1px solid white; 
+    background:  #FF63B1;
+    text-decoration: none;
+    color:#FFF;
+    border-radius: 5px;
+}
+.li a:hover {
+    background: #BBFFF3;
+    color: #FF63B1; 
+    border-color: white;
 }
