--- a/src/app/pages/dashboard/dashboard.css
+++ b/src/app/pages/dashboard/dashboard.css
@@ -1,18 +1,23 @@
 body{
-    background-color: #FFE7F3;
+    background-color: #4F3068;
     font-family: monospace;
+}
+
+div{
+    color: #ffffff;
+    font-size: 16px;
 }
 
 li {
     list-style: none; 
-    margin-right: 10px;
+    margin-right: 30px;
     display: inline;
 }
 
 ul {
     display: flex;
     justify-content: center;
-    background-color: #FF63B1;
+    background-color: #330F52;
     height: 50px;
     margin: 0;
     padding-top: 30px;
@@ -24,13 +29,13 @@ li a {
     padding: 10px 20px; 
     margin:0;
     border: 1px solid white; 
-    background:  #FF63B1;
+    background:  #330F52;
     text-decoration: none;
     color:#FFF;
     border-radius: 5px;
 }
 li a:hover {
-    background: #BBFFF3;
-    color: #FF63B1; 
+    background: #7846A1;
+    color: white; 
     border-color: white;
 }
