--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,42 +1,130 @@
 .login{
-    background-color: #FFE7F3;
     text-align: center;
-    font-family: monospace;         
+    background-color: #4F3068;
+    font-family: monospace;        
 }
 
-
-#input{
-    width: 300px;
-}
-
-.li {
-    list-style: none; 
-    margin-right: 10px;
-    display: inline;
-}
-
-.ul {
+.forrm{
     display: flex;
     justify-content: center;
-    background-color: #FF63B1;
-    height: 50px;
-    margin: 0;
-    padding-top: 30px;
-    font-size: 16px;
+}
 
-}
- 
-.li a {
-    padding: 10px 20px; 
-    margin:0;
-    border: 1px solid white; 
-    background:  #FF63B1;
-    text-decoration: none;
-    color:#FFF;
-    border-radius: 5px;
-}
-.li a:hover {
-    background: #BBFFF3;
-    color: #FF63B1; 
-    border-color: white;
-}
+.form {
+    background-color: #330F52;
+    border-radius: 20px;
+    box-sizing: border-box;
+    height: 450px;
+    margin-top: 40px;
+    padding: 20px;
+    width: 320px;
+  }
+  
+  .title {
+    color: #eee;
+    font-size: 36px;
+    font-weight: 600;
+    margin-top: 20px;
+    text-align: center;
+  }
+  
+  .subtitle {
+    color: #eee;
+    font-size: 16px;
+    font-weight: 600;
+    margin-top: 10px;
+  }
+  
+  .inputcontainer {
+    height: 50px;
+    position: relative;
+    width: 100%;
+  }
+  
+  .ic1 {
+    margin-top: 30px;
+    height: 50px;
+    position: relative;
+    width: 100%;
+  }
+  
+  .ic2 {
+    margin-top: 30px;
+    height: 50px;
+    position: relative;
+    width: 100%;
+  }
+
+  
+  .input {
+    background-color: #303245;
+    border-radius: 12px;
+    border: 0;
+    box-sizing: border-box;
+    color: #eee;
+    font-size: 12px;
+    height: 100%;
+    outline: 0;
+    padding: 4px 20px 0;
+    width: 100%;
+  }
+  
+  .cut {
+    background-color:#330F52 ;
+    border-radius: 10px;
+    height: 20px;
+    left: 20px;
+    position: absolute;
+    top: -20px;
+    transform: translateY(0);
+    transition: transform 200ms;
+    width: 75px;
+  }
+  
+  .input:focus ~ .cut,
+  .input:not(:placeholder-shown) ~ .cut {
+    transform: translateY(8px);
+  }
+  
+  .placeholder {
+    color: white;
+    left: 20px;
+    line-height: 14px;
+    pointer-events: none;
+    position: absolute;
+    transform-origin: 0 50%;
+    transition: transform 200ms, color 200ms;
+    top: 20px;
+  }
+  
+  .input:focus ~ .placeholder,
+  .input:not(:placeholder-shown) ~ .placeholder {
+    transform: translateY(-30px) translateX(10px) scale(0.75);
+  }
+  
+  .input:not(:placeholder-shown) ~ .placeholder {
+    color: white;
+  }
+  
+  .input:focus ~ .placeholder {
+    color: #A071C6;
+  }
+  
+  .submit {
+    background-color: #e81764;
+    border-radius: 12px;
+    border: 0;
+    box-sizing: border-box;
+    color: #eee;
+    cursor: pointer;
+    font-size: 18px;
+    height: 50px;
+    margin-top: 38px;
+    outline: 0;
+    text-align: center;
+    width: 100%;
+  }
+  
+  .submit:active {
+    background-color: #e81764;
+  }
+  
